# minimal-analytics-example

./: .coveragerc  .gitignore  Procfile  README.md  modelo_regresion_lineal_up.pkl  mypy.ini  pyproject.toml  pytest.ini  render.yaml  requirements.txt  requirements_dev.txt  ruff.toml  setup.py  time_series.pkl
.github/workflows/: ci.yml
src/: 01_build_and_publish_optimization_model.ipynb  02_call_endpoint_fix.ipynb  app.py
src/fcd/: __init__.py
src/fcd/api/: main.py  model_loader.py
src/fcd/api/health/: health_models.py
src/fcd/api/time_series/: time_series_models.py  time_series_router.py
src/fcd/model/: config.py  linear_regression.py  simulate_arima.py  time_series.py
src/regression_api/: main.py  model.py
tests/: conftest.py  test_runner.py
tests/integration/: test_api.py
tests/unit/: test_model.py
